# indonesia-worldcup-qualifier-prediction

./: Readme.md  go.mod  main.go  pyproject.toml
script/src/: main.py
